# hedgecut

./: .gitignore  Cargo.toml  README.md  adult.fish  cardio.fish  datasets.txt  defaults-train.csv  defaults.fish  experiment-forget-leafs.fish  experiment_search.fish  experiments_accuracy.fish  experiments_accuracy_forget.fish  experiments_forget.fish  experiments_max_tries.fish  experiments_robustness.fish  experiments_robustness_accuracy.fish  experiments_robustness_with_variants.fish  experiments_scans.fish  experiments_stress_test.fish  experiments_train_time.fish  givemesomecredit.fish  notes.txt  occupancy.csv  propublica.fish  shopping.fish  snippets.txt  titanic-attributes.csv  titanic-test.csv  titanic-train.csv  titanic.fish
backup/: split_scoring.rs  titanic.rs
benches/: scan_categorical.rs  scan_numerical.rs
datasets/: adult-test.csv  adult-train.csv  cardio-test.csv  cardio-train.csv  datasets.txt  defaults-test.csv  defaults-train.csv  givemesomecredit-test.csv  givemesomecredit-train.csv  propublica-test.csv  propublica-train.csv  shopping-test.csv  shopping-train.csv  titanic-test.csv  titanic-train.csv
notebooks/: drugs.csv  drugs.py  etd.py  extremely-randomized-trees.ipynb  occupancy.py  play.py  play2.py  play3.py  scoring.py  split-example.txt  stuff.py  titanic.py  utils.py
python/: etd.py  forget.py  prepare-adult.py  prepare-cardio.py  prepare-defaults.py  prepare-givemesomecredit.py  prepare-propublica.py  prepare-shopping.py  prepare-titanic.py  prepare_adult.py  prepare_cardio.py  prepare_defaults.py  prepare_givemesomecredit.py  prepare_propublica.py  prepare_shopping.py  sklearn_adult.py  sklearn_cardio.py  sklearn_defaults.py  sklearn_givemesomecredit.py  sklearn_propublica.py  sklearn_shopping.py  titanic-attributes.csv  titanic-labels.csv  train_time.py
python/baseline/: baseline.py
python/experimentation/: baseline.py  encoding.py
src/: dataset.rs  evaluation.rs  lib.rs  main.rs  scan.rs  split_scoring.rs  split_stats.rs  titanic.rs  tree.rs  utils.rs
