[package]
name = "hedgecut"
version = "0.1.0"
authors = ["Sebastian Schelter <s.schelter@uva.nl>"]
edition = "2018"

[[bin]]
name = "evaluate_on_defaults"
path = "src/bin/evaluate_on_defaults.rs"

[[bin]]
name = "evaluate_on_titanic"
path = "src/bin/evaluate_on_titanic.rs"

[lib]
path = "src/lib.rs"

[dependencies]
csv = "1.1"
rand = "0.6.5"
rayon = "1.1"
hashbrown = "0.8"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
opt-level = 3