[package]
name = "hedgecut"
version = "0.1.0"
authors = ["Sebastian Schelter <s.schelter@uva.nl>"]
edition = "2018"

[[bin]]
name = "evaluate_on_adult"
path = "src/bin/evaluate_on_adult.rs"

[[bin]]
name = "evaluate_on_shopping"
path = "src/bin/evaluate_on_shopping.rs"

[[bin]]
name = "evaluate_on_cardio"
path = "src/bin/evaluate_on_cardio.rs"

[[bin]]
name = "evaluate_on_propublica"
path = "src/bin/evaluate_on_propublica.rs"

[[bin]]
name = "evaluate_on_givemesomecredit"
path = "src/bin/evaluate_on_givemesomecredit.rs"

[[bin]]
name = "evaluate_forget"
path = "src/bin/evaluate_forget.rs"

[[bin]]
name = "evaluate_max_tries"
path = "src/bin/evaluate_max_tries.rs"

[[bin]]
name = "evaluate_train_time"
path = "src/bin/evaluate_train_time.rs"

[[bin]]
name = "evaluate_stress_test"
path = "src/bin/evaluate_stress_test.rs"

[[bin]]
name = "play"
path = "src/bin/play.rs"

[lib]
path = "src/lib.rs"

[dependencies]
csv = "1.1"
rand = "0.6.5"
rayon = "1.1"
hashbrown = "0.8"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
opt-level = 3